--- a/scripts/tools.rc
+++ b/scripts/tools.rc
@@ -7,6 +7,7 @@ git clone https://git.sansfontieres.com/~romi/esper tools/esper
 flag e +
 
 cd tools/esper
+./pick_prompt.rc
 zig build -Drelease-safe
 cp zig-out/bin/* $home/bin
 cp bin/* $home/bin
